Fix back button from not hiding on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ a:hover {
 
 	position: fixed;
 	top: 1em;
-	left: -4em;
+	left: -6em;
 
 	cursor: pointer;
 	transition: transform 0.35s ease;
